--- a/Spring Boot with HTML info for Design Patterns/Design Patterns/pom.xml
+++ b/Spring Boot with HTML info for Design Patterns/Design Patterns/pom.xml
@@ -75,7 +75,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>5.3.13</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
