Spring boot with HTML & CSS
Spring boot with HTML & CSS

--- a/Spring Boot with HTML info for Design Patterns/Design Patterns/src/main/resources/application.properties
+++ b/Spring Boot with HTML info for Design Patterns/Design Patterns/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.datasource.password=test
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.format_sql=TRUE
 spring.jpa.hibernate.ddl-auto=update
+
+#Server Properties
+server.port=8000
