--- a/Spring Boot with HTML info for Design Patterns/Design Patterns/src/main/resources/application.properties
+++ b/Spring Boot with HTML info for Design Patterns/Design Patterns/src/main/resources/application.properties
@@ -2,5 +2,16 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 logging.level.org.springframework.web=INFO
 
+#Data Sourse Properties
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/EducationDB?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.username=test
+spring.datasource.password=test
+
+#JPA Properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.format_sql=TRUE
+spring.jpa.hibernate.ddl-auto=update
+
 #Server Properties
 server.port=8000
