--- a/Educations/src/main/resources/application.properties
+++ b/Educations/src/main/resources/application.properties
@@ -4,7 +4,7 @@ logging.level.org.springframework.web=INFO
 
 #Data Sourse Properties
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/EducationDB?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/EducationDB?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
 spring.datasource.username=test
 spring.datasource.password=test
 
