--- a/Educations/src/main/resources/application.properties
+++ b/Educations/src/main/resources/application.properties
@@ -19,6 +19,6 @@ server.port=8000
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=noreply.sprboot@gmail.com
-spring.mail.password=anqtkjrjghouyoxe
+spring.mail.password=password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
