--- a/Business Calculator/pom.xml
+++ b/Business Calculator/pom.xml
@@ -113,6 +113,12 @@
 			<version>2.0.0.Final</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.librepdf</groupId>
+			<artifactId>openpdf</artifactId>
+			<version>1.3.26</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
