--- a/Business Calculator/src/main/resources/application.properties
+++ b/Business Calculator/src/main/resources/application.properties
@@ -15,3 +15,10 @@ spring.jpa.hibernate.ddl-auto=update
 
 #Server Properties
 server.port=8080
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=noreply.sprboot@gmail.com
+spring.mail.password=password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
