--- a/Business Calculator/pom.xml
+++ b/Business Calculator/pom.xml
@@ -125,6 +125,12 @@
 			<version>1.3.26</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
