--- a/Business Calculator/pom.xml
+++ b/Business Calculator/pom.xml
@@ -131,6 +131,10 @@
 			<version>7.0.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.poi</groupId>
